--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,17 @@
 {
   "trailingComma": "none",
-  "overrides": [
-    {
+  "tabWidth": 4,
+  "overrides": [{
       "files": "**/lwc/**/*.html",
-      "options": { "parser": "lwc" }
+      "options": {
+        "parser": "lwc"
+      }
     },
     {
       "files": "*.{cmp,page,component}",
-      "options": { "parser": "html" }
+      "options": {
+        "parser": "html"
+      }
     }
   ]
 }
